--- a/libs/modules/blog.less
+++ b/libs/modules/blog.less
@@ -313,11 +313,11 @@
 	position: relative;
 	padding-left: 3rem;
 	.i-brand {
-		left: 0;
+		left: .25rem;
 		font-size: 2rem;
 		position: absolute;
-		top: 1.4rem;
-		color: @heritage-blue;
+		top: 1.2rem;
+		color: @heritage-yellow;
 	}
     h3 {
         font-weight: @font-weight-boldest;
@@ -326,7 +326,7 @@
         margin: 0;
     }
     p {
-        color: @heritage-blue;
+        color: @gray-2;
         margin-top: 0;
     }
 }
