--- a/libs/template/sidebar-blog.jade
+++ b/libs/template/sidebar-blog.jade
@@ -6,6 +6,19 @@
                 button.btn.btn-primary
                     i.icon-search
 
+    .blog-sidebar--navigation
+        ul
+            li
+                a(href="blog-home.html") Home
+            li
+                a(href="#") About
+            li
+                a(href="blog-team.html") The Team
+            li
+                a(href="blog-get-involved.html") Get involved
+            li
+                a(href="blog-jobs.html") Jobs
+
     .blog-sidebar--category
         fieldset
             label(for="exampleSelect1") Select Category
@@ -18,14 +31,8 @@
                     option Research
 
     .blog-sidebar--updates
-        .card-banner-top
-            p Subscribe by email
-        .card-text
-            p Enter your name and email address to subscribe to the digital blog and receive notifications of new posts by email.
-            .fieldset
-                label(for="name") Your name
-                input(type="Email", placeholder="Name")
-            .fieldset
-                label(for="email") Your email
-                input(type="Email", placeholder="Email")
-            button.btn.btn-primary.tick-button-icon Submit
+        label(for="") Subscribe by email
+        .fieldset(style="margin-bottom: 0;")
+            .field-group.field-group--buttons
+                input(type="text", placeholder="Email")
+                button.btn.btn-primary Go
