dev:change: Updating blog tag styles

--- a/libs/jade/dev/blog/blog-post.jade
+++ b/libs/jade/dev/blog/blog-post.jade
@@ -37,10 +37,8 @@ block content
 
 		p From 15 February people will be able to do just that. We’ll be publishing new content that focuses on the help people need and not the nuances and complications of the DWP claim form, assessment criteria and unhelpful guidance (all 70,000-plus jargon-filled words of it),
 
-		.blog-tag
-			| Research
-		.blog-tag
-			| Content
+		a.blog-tag(href="#") Research
+		a.blog-tag(href="#") Content
 
 		.title__subheading--footer
 			p Share this page. #[a(#) Find out more about sharing.]
