--- a/libs/jade/dev/blog/blog-home-1.jade
+++ b/libs/jade/dev/blog/blog-home-1.jade
@@ -14,37 +14,51 @@ block content
 	.articleContent
 		.flex-container.flex-row
 			.blog-home--article-newest
-				img(src="#{dir}images/sample-blog/pip-feature-images-2.jpg" alt="PIP feature image")
-				h2 #[a(href="blog-post.html") Making things simpler: Personal Independence Payment (PIP)]
+				img(src="#{dir}images/sample-blog/problems.jpg" alt="PIP feature image")
+				h2 #[a(href="blog-post.html") When the evidence is against you]
 				.excerpt
-					p Making a claim for the benefit Personal Independence Payment (PIP) can take a long time time. It can often take up to 4 months from starting the application to getting your money (if you’re #[a(href="#") terminally ill] your claim will be processed more quickly).
+					p Publish and be damned? Not when the evidence says no.
+					p When the workplace rights team began writing new content about pay, our research showed the first thing most advisers did was check someone’s employment status.
+					p Employment what?
+					p Turns out, most people don’t know what employment status is. As we learned over and over during testing.
 
-			.blog-home--article
-				h2 #[a(href="blog-post.html") Introducing… immigration advice]
-				p.small #[a(href="#") Emily Brunwin] on January 1, 2016 in #[a(href="#") Design], #[a(href="#") Research]
-				img(src="#{dir}images/sample-blog/For-blog-post-featured-images.png" alt="Imigration feature image")
-				p We’ve pushed the button on some brand new content – immigration advice for the public and advisers. It’s new territory – so why did we take the leap?
+			//.blog-home--article
+				h2 #[a(href="blog-post.html") When the evidence is against you]
+				p.small #[a(href="#") Carole Ray] on July 1, 2016 in #[a(href="#") Content], #[a(href="#") Testing]
+				img(src="#{dir}images/sample-blog/problems.jpg" alt="Imigration feature image")
+				p Publish and be damned? Not when the evidence says no.
+				p When the workplace rights team began writing new content about pay, our research showed the first thing most advisers did was check someone’s employment status.
 				//a.btn-secondary.btn-small(href="#", type="button") Read full article
 
 			.blog-home--article
-				h2 #[a(href="blog-post.html") Introducing… immigration advice]
-				p.small #[a(href="#") Emily Brunwin] on January 1, 2016 in #[a(href="#") Design], #[a(href="#") Research]
-				img(src="#{dir}images/sample-blog/For-blog-post-featured-images.png" alt="Imigration feature image")
-				p We’ve pushed the button on some brand new content – immigration advice for the public and advisers. It’s new territory – so why did we take the leap?
+				h2 #[a(href="blog-post.html") How to run a spike]
+				p.small #[a(href="#") Carole Ray] on June 10, 2016 in #[a(href="#") Content]
+				img(src="#{dir}images/sample-blog/adviser-needs.jpg" alt="Imigration feature image")
+				p What’s a ‘spike’, you ask?
+				p Very good question! And one we asked as well, when Simon, our Content Lead, asked us to do one.
+				p A spike (as it turns out) is intensive time-limited work looking at resolving a particular problem or issue.
 				//a.btn-secondary.btn-small(href="#", type="button") Read full article
 
 			.blog-home--article
-				h2 #[a(href="blog-post.html") Introducing… immigration advice]
-				p.small #[a(href="#") Emily Brunwin] on January 1, 2016 in #[a(href="#") Design], #[a(href="#") Research]
-				img(src="#{dir}images/sample-blog/For-blog-post-featured-images.png" alt="Imigration feature image")
-				p We’ve pushed the button on some brand new content – immigration advice for the public and advisers. It’s new territory – so why did we take the leap?
+				h2 #[a(href="blog-post.html") The way we write]
+				p.small #[a(href="#") Alec Johnson] on May 20, 2016 in #[a(href="#") Design], #[a(href="#") Content]
+				img(src="#{dir}images/sample-blog/employment-support-allowance.jpg" alt="Imigration feature image")
+				p They say writing is a solitary activity. Whoever ‘they’ are.
+				p Sometimes it is. There are plenty of lonesome desks where people tap away in isolation.
 				//a.btn-secondary.btn-small(href="#", type="button") Read full article
 
 			.blog-home--article
-				h2 #[a(href="blog-post.html") Introducing… immigration advice]
-				p.small #[a(href="#") Emily Brunwin] on January 1, 2016 in #[a(href="#") Design], #[a(href="#") Research]
-				img(src="#{dir}images/sample-blog/For-blog-post-featured-images.png" alt="Imigration feature image")
-				p We’ve pushed the button on some brand new content – immigration advice for the public and advisers. It’s new territory – so why did we take the leap?
+				h2 #[a(href="blog-post.html") Benefit checker, our first review]
+				p.small #[a(href="#") Eliot Hill] on May 12, 2016 in #[a(href="#") Design], #[a(href="#") Content]
+				img(src="#{dir}images/sample-blog/need-more-help.jpg" alt="Imigration feature image")
+				p The benefits system is confusing. There’s a lot of information out there so it can be hard for people to know where to start. Add to that the stressful situations people are often in when they need to claim benefits and it creates a perfect storm.
+				//a.btn-secondary.btn-small(href="#", type="button") Read full article
+
+			.blog-home--article
+				h2 #[a(href="blog-post.html") Casebook on tour]
+				p.small #[a(href="#") Cat Togher] on May 6, 2016 in #[a(href="#") Case management], #[a(href="#") Casebook], #[a(href="#") Research], #[a(href="#") Testing]
+				img(src="#{dir}images/sample-blog/wb-adviceguide-dashboard.jpg" alt="Imigration feature image")
+				p Peanuts are not nuts*. Welsh cakes don’t dip well in tea. Paddington station is very confusing. Ambulance response time in Peterborough can be up to 20 mins.
 				//a.btn-secondary.btn-small(href="#", type="button") Read full article
 
 		//.flex-container.flex-row
