--- a/libs/modules/blog.less
+++ b/libs/modules/blog.less
@@ -13,12 +13,19 @@
 }
 
 .blog-tag {
-	font-weight: 700;
 	line-height: 1rem;
 	display: inline-block;
-	padding: .5rem;
+	padding: .3rem .5rem;
 	color: @heritage-blue;
 	background-color: @heritage-yellow-lighter;
+	font-size: @font-size-small;
+	margin-right: .5em;
+	border-bottom: none;
+	&:active,
+	&:hover,
+	&:focus {
+		border-bottom: none;
+	}
 }
 
 // Sidebar
@@ -65,7 +72,7 @@
 .blog-home--article {
 	padding: 1rem 0 2rem 0;
 	background-color: @white;
-	border-bottom: @gray-6 1px solid;
+	border-bottom: @gray-6 2px solid;
 	font-size: 0.875rem;
 	line-height: 1.7rem;
 	h2 {
@@ -74,7 +81,7 @@
 		a {
 			color: #004b88;
 			text-decoration: none;
-			border-bottom: none;
+			//border-bottom: none;
 		}
 	}
 	.small {
@@ -105,7 +112,7 @@
 			margin-top: 0;
 			color: #004b88;
 			text-decoration: none;
-			border-bottom: none;
+			//border-bottom: none;
 		}
 	}
     .articleContent & img {
