--- a/libs/base/variables.less
+++ b/libs/base/variables.less
@@ -272,11 +272,12 @@
 @i-help:                    "\e625";
 @i-exit: 					"\e60a";
 @i-new-window: 				"\e60f";
-@i-google: 					"\e60b";
+@i-messenger: 				"\e905";
 @i-facebook: 				"\e60c";
 @i-twitter: 				"\e60d";
 @i-undo:                    "\e626";
 @i-vertical-dots:			"\e901";
 @i-github:					"\e902";
 @i-spinner:					"\e903";
+@i-cita:					"\e904";
 @i-zws: 					"_";
