--- a/libs/guide.less
+++ b/libs/guide.less
@@ -1118,12 +1118,16 @@ div.tooltip:before {
         content: @i-new-window;
     }
 
-    .i-google .icon:before {
-        content: @i-google;
+    .i-cita .icon:before {
+        content: @i-cita;
     }
 
     .i-facebook .icon:before {
         content: @i-facebook;
+    }
+
+    .i-messenger .icon:before {
+        content: @i-messenger;
     }
 
     .i-twitter .icon:before {
