--- a/libs/jade/styles/icons.jade
+++ b/libs/jade/styles/icons.jade
@@ -293,21 +293,6 @@ block content
 						td new window
 						td.variable @i-new-window
 						td.unicode \e60f
-					tr.i-google
-						td.icon
-						td google
-						td.variable @i-google
-						td.unicode \e60b
-					tr.i-facebook
-						td.icon
-						td facebook
-						td.variable @i-facebook
-						td.unicode \e60c
-					tr.i-twitter
-						td.icon
-						td twitter
-						td.variable @i-twitter
-						td.unicode \e60d
 					tr.i-undo
 						td.icon
 						td undo
@@ -318,6 +303,26 @@ block content
 						td vertical dots
 						td.variable @i-vertical-dots
 						td.unicode \e901
+					tr.i-cita
+						td.icon
+						td cita
+						td.variable @i-cita
+						td.unicode \e904
+					tr.i-facebook
+						td.icon
+						td facebook
+						td.variable @i-facebook
+						td.unicode \e60c
+					tr.i-messenger
+						td.icon
+						td messenger
+						td.variable @i-messenger
+						td.unicode \e905
+					tr.i-twitter
+						td.icon
+						td twitter
+						td.variable @i-twitter
+						td.unicode \e60d
 					tr.i-github
 						td.icon
 						td github
