change: Removed sharebar styles for G+ and created styles for Messenger

--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -109,8 +109,8 @@
  * SOCIAL BRAND COLOURS
 */
 
-@google-plus-brand-colour:  #DC4E41;
 @facebook-brand-colour:     #3B579D;
+@messenger-brand-colour:	#0084FF;
 @twitter-brand-colour:      #55ACEE;
 @whatsapp-brand-colour:     #30D74D;
 
