--- a/libs/modules/share-bar.less
+++ b/libs/modules/share-bar.less
@@ -237,16 +237,16 @@ html[data-useragent*='Mobi'] .a-social-whatsapp {
         }
     }
 
-    .share-bar__link--google {
+    .share-bar__link--messenger {
         &:hover, &:focus {
-            background: @google-plus-brand-colour;
+            background: @messenger-brand-colour;
         }
 
         @media (max-width: @screen-xs-max) {
-            background: @google-plus-brand-colour;
+            background: @messenger-brand-colour;
 
             &:hover {
-                background: darken(@google-plus-brand-colour,10%);
+                background: darken(@messenger-brand-colour,10%);
             }
         }
     }
