add: Created styles for linkedin icons

--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -113,6 +113,7 @@
 @messenger-brand-colour:	#0084FF;
 @twitter-brand-colour:      #55ACEE;
 @whatsapp-brand-colour:     #30D74D;
+@linkedin-brand-colour:		#0077B5;
 
 /***************************************************************************
  * HEADERS
