--- a/libs/base/variables.less
+++ b/libs/base/variables.less
@@ -278,6 +278,7 @@
 @i-undo:                    "\e626";
 @i-vertical-dots:			"\e901";
 @i-github:					"\e902";
+@i-linkedin:				"\e906";
 @i-spinner:					"\e903";
 @i-cita:					"\e904";
 @i-zws: 					"_";
