--- a/libs/guide.less
+++ b/libs/guide.less
@@ -1134,6 +1134,10 @@ div.tooltip:before {
         content: @i-twitter;
     }
 
+    .i-linkedin .icon:before {
+        content: @i-linkedin;
+    }
+
     .i-undo .icon:before {
         content: @i-undo;
     }
