--- a/libs/jade/styles/icons.jade
+++ b/libs/jade/styles/icons.jade
@@ -243,11 +243,6 @@ block content
 						td doc code
 						td.variable @i-doc-code
 						td.unicode \f1c9
-					tr.i-whatsapp
-						td.icon
-						td whatsapp
-						td.variable @i-whatsapp
-						td.unicode \f232
 					tr.i-copy
 						td.icon
 						td copy
@@ -318,11 +313,21 @@ block content
 						td messenger
 						td.variable @i-messenger
 						td.unicode \e905
+					tr.i-whatsapp
+						td.icon
+						td whatsapp
+						td.variable @i-whatsapp
+						td.unicode \f232
 					tr.i-twitter
 						td.icon
 						td twitter
 						td.variable @i-twitter
 						td.unicode \e60d
+					tr.i-linkedin
+						td.icon
+						td linkedin
+						td.variable @i-linkedin
+						td.unicode \e906
 					tr.i-github
 						td.icon
 						td github
