--- a/libs/jade/dev/blog/blog-post.jade
+++ b/libs/jade/dev/blog/blog-post.jade
@@ -46,6 +46,8 @@ block content
 			a.a-social-facebook(href="https://www.facebook.com/sharer/sharer.php?u=", data-track="Facebook", rel="external") Facebook
 			//a.a-social-google-plus(href="https://plus.google.com/share?url=", data-track="Google+", rel="external") Google Plus
 			a.a-social-whatsapp.show-mobile(href="javascript:window.location='whatsapp://send?text='+encodeURIComponent(location.href);") Whatsapp
+			a.a-social-messenger.show-mobile(href="") Messenger
+			a.a-social-linkedin.show-mobile(href="") LinkedIn
 			//button.toolbar-button.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Email
 			a.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Email
 			button.a-social-copy Copy link
