change: Lightened the blog sidebars Added a new colour @heritage-yellow-lightest

--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -39,6 +39,7 @@
 @heritage-blue-lightest:	#f2f8ff;
 @heritage-yellow:       	#FCBB69;
 @heritage-yellow-lighter:   lighten(@heritage-yellow, 18%);
+@heritage-yellow-lightest:  lighten(@heritage-yellow, 26%);
 @heritage-yellow-darker:    darken(@heritage-yellow, 10%);
 @responsible-purple:    	#57486B;
 @responsible-aqua:      	#A6D6AE;
