dev: blog colour tweaks

--- a/libs/modules/blog.less
+++ b/libs/modules/blog.less
@@ -118,7 +118,7 @@
 .blog-sidebar--updates {
 	.well;
 	color: #fff;
-	background-color: #32457E;
+	background-color: @purple-dark;
 }
 
 // Homepage
@@ -259,6 +259,8 @@
 // Header
 .blog-header {
 	background-color: @heritage-blue;
+	border-bottom: 8px @heritage-yellow solid;
+	margin-bottom: 20px;
 	&--content {
 		max-width: @breakpoint-lg;
 		margin: 0 auto;
