dev:change: Added a new blogname variable to template-site, which allows the title in the top right to be adjusted per page (or removed)

--- a/libs/jade/dev/blog/blog-get-involved.jade
+++ b/libs/jade/dev/blog/blog-get-involved.jade
@@ -3,6 +3,7 @@ block settings
 	- var sidebar = true
 	- var toolbars = false
 	- var dir = "../../"
+	- var blogname = "Digital Blog"
 	- var blog = true
 	- var nofooter = true
 
