--- a/libs/jade/dev/blog/blog-home-grid.jade
+++ b/libs/jade/dev/blog/blog-home-grid.jade
@@ -1,6 +1,7 @@
 block settings
 	- var title = "Citizens Advice digital blog"
 	- var dir = "../../"
+	- var blogname = "Digital Blog"
 	- var blog = true
 	- var nofooter = true
 
