--- a/libs/jade/dev/blog/blog-jobs-1.jade
+++ b/libs/jade/dev/blog/blog-jobs-1.jade
@@ -2,6 +2,7 @@ block settings
 	- var title = "Join the digital team"
 	//- var sidebar = true
 	- var dir = "../../"
+	- var blogname = "Digital Blog"
 	- var blog = true
 	- var fullpage = true
 	- var nofooter = true
