--- a/libs/jade/dev/blog/blog-post.jade
+++ b/libs/jade/dev/blog/blog-post.jade
@@ -2,6 +2,7 @@ block settings
 	- var title = "Working with advisers to design new PIP content"
 	- var sidebar = true
 	- var dir = "../../"
+	- var blogname = "Digital Blog"
 	- var blog = true
 	- var blog = true
 	- var nofooter = true
