--- a/libs/template/template-site.jade
+++ b/libs/template/template-site.jade
@@ -62,7 +62,7 @@ html.no-js
 							a(href="blog-jobs.html") Jobs
 
 					.blog-header--branding
-						a(href="#") Digital Blog
+						a(href="#") #{blogname}
 
 		else
 			header#main-nav-beta
