--- a/libs/jade/dev/blog/blog-home-1.jade
+++ b/libs/jade/dev/blog/blog-home-1.jade
@@ -2,6 +2,7 @@ block settings
 	//- var title = "Citizens Advice digital blog"
 	- var sidebar = true
 	- var dir = "../../"
+	- var blogname = "Digital Blog"
 	- var blog = true
 	- var nofooter = true
 
