--- a/libs/jade/dev/blog/blog-search.jade
+++ b/libs/jade/dev/blog/blog-search.jade
@@ -2,6 +2,7 @@ block settings
 	- var title = "Search results"
 	- var sidebar = true
 	- var dir = "../../"
+	- var blogname = "Digital Blog"
 	- var blog = true
 	- var nofooter = true
 
