dev:change: Changed blog email block in sidebar to teal

--- a/libs/modules/blog.less
+++ b/libs/modules/blog.less
@@ -118,7 +118,7 @@
 .blog-sidebar--updates {
 	.well;
 	color: #fff;
-	background-color: @purple-dark;
+	background-color: @inventive-teal;
 }
 
 // Homepage
