dev:add: Created a blog index page for listing the different blogs

--- a/libs/jade/dev/blog/blog-subscription.jade
+++ b/libs/jade/dev/blog/blog-subscription.jade
@@ -29,6 +29,12 @@ block content
 						label.checkbox.checkbox--block
 							input(name="checkbox", type="checkbox")
 							p
+								span Charity blog
+								br
+								| A blog for the whole charity
+						label.checkbox.checkbox--block
+							input(name="checkbox", type="checkbox")
+							p
 								span Policy blog
 								br
 								| Our blog about policy updates and changes
