--- a/libs/jade/modules/toolbar.jade
+++ b/libs/jade/modules/toolbar.jade
@@ -44,9 +44,8 @@ block content
 				p Share this page. #[a(#) Find out more about sharing.]
 				a.a-social-twitter(href="https://twitter.com/share?url=", data-track="Twitter", rel="external") Twitter
 				a.a-social-facebook(href="https://www.facebook.com/sharer/sharer.php?u=", data-track="Facebook", rel="external") Facebook
-				//a.a-social-google-plus(href="https://plus.google.com/share?url=", data-track="Google+", rel="external") Google Plus
 				a.a-social-whatsapp.show-mobile(href="javascript:window.location='whatsapp://send?text='+encodeURIComponent(location.href);") Whatsapp
-				//button.toolbar-button.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Email
+				a.a-social-messenger.show-mobile(href="") Messenger
 				a.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Email
 				button.a-social-copy Copy link
 					.copied Copied!
@@ -66,6 +65,7 @@ block content
 				|     &lt;a class="a-social-twitter" data-track="Twitter" href="https://twitter.com/share?url=" rel="external"&gt;Twitter&lt;/a&gt;
 				|     &lt;a class="a-social-facebook" data-track="Facebook" href="https://www.facebook.com/sharer/sharer.php?u=" rel="external"&gt;Facebook&lt;/a&gt;
 				|     &lt;a class="a-social-whatsapp show-mobile" href="javascript:window.location='whatsapp://send?text='+encodeURIComponent(location.href);"&gt;Whatsapp&lt;/a&gt;
+				|     &lt;a class="a-social-messenger show-mobile" href=""&gt;Messenger&lt;/a&gt;
 				|     &lt;a class="a-social-email" data-track="Email page" href="javascript:emailCurrentPage()"&gt;Email&lt;/a&gt;
 				|     &lt;button class="a-social-copy"&gt;Copy link&lt;div class="copied"&gt;Copied!&lt;/div&gt;&lt;/button&gt;
 				| &lt;/div&gt;
