--- a/libs/jade/dev/site/content.jade
+++ b/libs/jade/dev/site/content.jade
@@ -8,7 +8,7 @@ extends /template/template-site.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: dir + "home.html"},
+		{title: "Get advice", href: dir + "navigation.html"},
 		{title: "Benefits", href: dir + "#"},
 		{title: "PIP"}])
 
