dev: add blog synopsis to sidebar

--- a/libs/modules/blog.less
+++ b/libs/modules/blog.less
@@ -259,7 +259,7 @@
 // Header
 .blog-header {
 	background-color: @heritage-blue;
-	border-bottom: 8px @heritage-yellow solid;
+	border-bottom: 8px @heritage-yellow-lighter solid;
 	margin-bottom: 20px;
 	&--content {
 		max-width: @breakpoint-lg;
