--- a/libs/template/sidebar-blog.jade
+++ b/libs/template/sidebar-blog.jade
@@ -1,4 +1,8 @@
 .side-nav-beta.blog-sidebar
+    .blog-sidebar--category
+        label About the digital blog
+        p The digital team is redesigning our online content and building a new case management system for Citizens Advice based on user need.
+
     .blog-sidebar--search
         label Search blog
         fieldset
