fix: Fixed date field bug caused by adding clear to fieldset. Removed it from date fieldsets

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -403,6 +403,7 @@ input[class*="dob-"] {
     float: left;
     margin-right: @box-spacing-horizontal/2;
     margin-bottom: 0;
+    clear: none;
     &:last-child {
         margin: 0;
     }
