--- a/libs/template/toolbar.jade
+++ b/libs/template/toolbar.jade
@@ -6,6 +6,7 @@
 	button.toolbar-button.a-social-print(href="javascript:window.print();", data-track="Print") Print
 	if toolbarsadviser
 		button.toolbar-button.a-social-references(href="#!", data-track="References") References
+		button.toolbar-button.a-social-word(href="https://www.citizensadvice.org.uk/Static/word/word-template-ew.dot") Word
 		span.info-extent Extent
 		span.info-reviewed Reviewed
 		span.info-owner Owner
