--- a/libs/jade/dev/blog/blog-post.jade
+++ b/libs/jade/dev/blog/blog-post.jade
@@ -46,8 +46,8 @@ block content
 			a.a-social-twitter(href="https://twitter.com/share?url=", data-track="Twitter", rel="external") Twitter
 			a.a-social-facebook(href="https://www.facebook.com/sharer/sharer.php?u=", data-track="Facebook", rel="external") Facebook
 			a.a-social-whatsapp.show-mobile(href="javascript:window.location='whatsapp://send?text='+encodeURIComponent(location.href);") Whatsapp
-			a.a-social-messenger.show-mobile(href="") Messenger
-			a.a-social-linkedin.show-mobile(href="") LinkedIn
+			a.a-social-messenger.show-mobile(href="javascript:window.location='fb-messenger://share?link='+encodeURIComponent(location.href);") Messenger
+			a.a-social-linkedin(target="_blank") LinkedIn
 			a.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Email
 			button.a-social-copy Copy link
 				.copied Copied!
