add: Created new style for Word doc in the toolbar

--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -256,6 +256,16 @@
         bottom: -0.05em;
     }
 }
+.a-social-word {
+    border-bottom-color: @white;
+    margin-right: .9em;
+    &:before {
+        content: @i-doc-word;
+        color: @blue-light;
+        &:extend(.a-social-top);
+        bottom: -0.05em;
+    }
+}
 .a-social-email {
     border-bottom-color: @white;
     margin-right: .9em;
