fix: Added important to .show-mobile to make sure it always hides above mobile

--- a/libs/base/utility.less
+++ b/libs/base/utility.less
@@ -157,6 +157,6 @@ a.remove {
 }
 .show-mobile {
     @media (min-width:@screen-md-min) {
-        display: none;
+        display: none !important;
     }
 }
