--- a/libs/jade/modules/toolbar.jade
+++ b/libs/jade/modules/toolbar.jade
@@ -37,16 +37,16 @@ block content
 					| England
 				button.toolbar-button.a-social-print(href="javascript:window.print();", data-track="Print") Print
 				button.toolbar-button.a-social-references(href="#!", data-track="References") References
-				a.toolbar-button.a-social-word(href="https://www.citizensadvice.org.uk/Static/word/word-template-ew.dot") Word
 				span.info-extent Extent
 				span.info-reviewed Reviewed
 				span.info-owner Owner
+				a.toolbar-button.a-social-word(href="https://www.citizensadvice.org.uk/Static/word/word-template-ew.dot") Word template
 			.title__subheading--footer
 				p Share this page. #[a(#) Find out more about sharing.]
-				a.a-social-twitter(href="https://twitter.com/share?url=", data-track="Twitter", rel="external") Twitter
-				a.a-social-facebook(href="https://www.facebook.com/sharer/sharer.php?u=", data-track="Facebook", rel="external") Facebook
 				a.a-social-whatsapp(href="javascript:window.location='whatsapp://send?text='+encodeURIComponent(location.href);") Whatsapp
 				a.a-social-messenger(href="javascript:window.location='fb-messenger://share?link='+encodeURIComponent(location.href);") Messenger
+				a.a-social-twitter(href="https://twitter.com/share?url=", data-track="Twitter", rel="external") Twitter
+				a.a-social-facebook(href="https://www.facebook.com/sharer/sharer.php?u=", data-track="Facebook", rel="external") Facebook
 				a.a-social-linkedin(target="_blank") LinkedIn
 				a.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Email
 				button.a-social-copy Copy link
@@ -65,10 +65,10 @@ block content
 				| &lt;/div&gt;
 				| &lt;div class="title__subheading--footer"&gt;
 				|     &lt;p&gt;Share this page. &lt;a&gt;Find out more about sharing.&lt;/a&gt;&lt;/p&gt;
-				|     &lt;a class="a-social-twitter" data-track="Twitter" href="https://twitter.com/share?url=" rel="external"&gt;Twitter&lt;/a&gt;
-				|     &lt;a class="a-social-facebook" data-track="Facebook" href="https://www.facebook.com/sharer/sharer.php?u=" rel="external"&gt;Facebook&lt;/a&gt;
 				|     &lt;a class="a-social-whatsapp show-mobile" href="javascript:window.location='whatsapp://send?text='+encodeURIComponent(location.href);"&gt;Whatsapp&lt;/a&gt;
 				|     &lt;a class="a-social-messenger show-mobile" href="javascript:window.location='fb-messenger://share?link='+encodeURIComponent(location.href);"&gt;Messenger&lt;/a&gt;
+				|     &lt;a class="a-social-twitter" data-track="Twitter" href="https://twitter.com/share?url=" rel="external"&gt;Twitter&lt;/a&gt;
+				|     &lt;a class="a-social-facebook" data-track="Facebook" href="https://www.facebook.com/sharer/sharer.php?u=" rel="external"&gt;Facebook&lt;/a&gt;
 				|     &lt;a class="a-social-linkedin" target="_blank"&gt;LinkedIn&lt;/a&gt;
 				|     &lt;a class="a-social-email" data-track="Email page" href="javascript:emailCurrentPage()"&gt;Email&lt;/a&gt;
 				|     &lt;button class="a-social-copy"&gt;Copy link&lt;div class="copied"&gt;Copied!&lt;/div&gt;&lt;/button&gt;
